[gd_scene load_steps=4 format=3 uid="uid://camapcej3ub4e"]

[ext_resource type="Script" uid="uid://1uj1f5ggpsal" path="res://Settings.gd" id="1_2fv1l"]
[ext_resource type="Texture2D" uid="uid://byfd3ttl4jtxv" path="res://1601967960123060162 (1).png" id="2_37a8j"]
[ext_resource type="AudioStream" uid="uid://cfbfn6c8r6eif" path="res://anikv_-_menya-ne-budet.mp3" id="3_mx4kw"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2fv1l")

[node name="1601967960123060162(1)" type="Sprite2D" parent="."]
position = Vector2(590.5, 338)
scale = Vector2(0.935156, 0.955556)
texture = ExtResource("2_37a8j")

[node name="TextureRect" type="TextureRect" parent="."]
layout_direction = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="VolumeLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Громкость"

[node name="VolumeSlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.05

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Назад"

[node name="MusicPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_mx4kw")
